--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body {
     "four"
     "five";
   gap: 1.5rem;
-  padding: 2rem;
+  /* padding: 2rem; */
   width: min(95%, 70rem);
 }
 
@@ -123,7 +123,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 2rem;
+  padding: 1rem;
   box-shadow: 0 3px 8px hsl(0, 0%, 50%, 0.5);
   border-radius: 0.5rem;
 }
